@@ -57,6 +57,7 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #include <stdio.h>
 #include <stdlib.h>
 #include <fstream>
+#include <errno.h>
 
 #include "nServerInfo.h"
 #include "nSocket.h"
@@ -85,6 +86,7 @@ public:
     bool     windowed_;
     bool     use_directx_;
     bool     dont_use_directx_;
+    tString  inputFile_;
 
     gMainCommandLineAnalyzer()
     {
@@ -93,6 +95,7 @@ public:
         fullscreen_ = false;
         use_directx_ = false;
         dont_use_directx_ = false;
+        inputFile_ = "";
     }
 
 
@@ -111,7 +114,10 @@ private:
         {
             windowed_=true;
         }
-
+        else if ( parser.GetOption( inputFile_, "--input" ) )
+        {
+            daemon_ = false;
+        }
 #ifdef WIN32
         else if ( parser.GetSwitch( "+directx") )
         {
@@ -143,7 +149,8 @@ private:
 #else
 #ifndef WIN32
         s << "-d, --daemon                 : allow the dedicated server to run as a daemon\n"
-        << "                               (will not poll for input on stdin)\n";
+          << "                               (will not poll for input, unless overridden by --input)\n";
+        s << "--input <file>               : Poll for input from this file. Default is stdin\n";
 #endif
 #endif
     }
@@ -894,7 +901,24 @@ int main(int argc,char **argv){
             SDL_Quit();
 #else // DEDICATED
             if (!commandLineAnalyzer.daemon_)
+            {
+                if ( commandLineAnalyzer.inputFile_.Len() > 1 )
+                {
+                    FILE *in = fopen( commandLineAnalyzer.inputFile_, "r" );
+                    if ( in )
+                    {
+                        atexit( sr_Close_stdin );
+                        fseek( in, 0, SEEK_END );
+                        sr_input = in;
+                    }
+                    else
+                    {
+                        std::cerr << "Error opening input file '" << commandLineAnalyzer.inputFile_ << "': "
+                                  << strerror( errno ) << ". Using stdin to poll for input.\n";
+                    }
+                }
                 sr_Unblock_stdin();
+            }
 
             sr_glOut=0;
 
